fixed layout bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 </head>
 <body class="m-0 font-family-roboto default-font-size">
     <header class="container-1 d-flex align-items-center justify-content-between py-19">
@@ -63,7 +62,7 @@
         </section>
         <section id="plan-and-manage" class="d-flex f-direction-row bg-f5f8ff pt-171 pl-271">
             <div>
-                <h2 class="color-3d4f9f mt-38 text-align-left">desktop and mobile app</h2>
+                <h2 class="color-3d4f9f mt-38">desktop and mobile app</h2>
                 <h3 class="mt-27"><strong>Plan</strong> and <strong>manage</strong></h3>
                 <p class="mt-27">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata. Solum patrioque no sea. Mea ex malis mollis oporteat. Eum an expetenda consequat.</p>
                 <div class="d-flex f-direction-row mt-47">
@@ -216,13 +215,15 @@
             </div>
         </section>
         <div class="line"></div>
-        <section id="newsletter" class="bg-fcfdff container d-flex f-direction-row py-118">
-            <div>
+        <section id="newsletter" class="bg-fcfdff containe d-fle f-direction-ro py-118 mx-aut">
+            <div class="container d-flex f-direction-row mx-auto">
+		<div>
                 <h2 class="color-3d4f9f">Sign up for newsletter</h2>
-                <p class="w-330">Sea no dico percipitur. Fierent constituam definitiones id eum</p>
+                <p class="w-330">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu, homero alterum.</p>
             </div>
-	    <button class="btn-2 w-184 bg-efeff7 color-7a85ad border-none mr-14 mt-20">Email address</button>
-	    <button class="btn-2 w-279 bg-4d6ce1 color-primary border-none mt-20">Save me</button>
+	    <button class="btn-2 w-279 bg-efeff7 color-7a85ad border-none mr-14 mt-20 ml-80 pl-23 text-align-left">Email address</button>
+	    <button class="btn-2 w-184 bg-4d6ce1 color-primary border-none mt-20">Save me</button>
+	    </div>
         </section>
         <div class="line"></div>
     </main>
